[metadata]
name = hass-mqtt-things
version = attr: ham.__version__
url = https://github.com/alexbarcelo/hass-mqtt-things
description = Library for rapid development of things to be integrated with Home Assistant through MQTT
long_description = file: README.md
keywords = home-assistant, things, home automation, iot, internet of things
license = Apache Software License
classifiers =
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12
  License :: OSI Approved :: Apache Software License
  Topic :: Home Automation
  Intended Audience :: Developers


[options]
packages = ham
install_requires = 
  paho-mqtt
  getmac
